--- a/src/dailynote/index.html
+++ b/src/dailynote/index.html
@@ -20,6 +20,7 @@ oh fun fact, simon willison is the guy who made the django framework
 </p>
 <small>*not actually daily</small>
 
+{% include tagcloud.html category = "dailynote" %}
 {% include tagcloud-simple.html category = "dailynote" %}
 
 <h2>Recent notes</h2>
