--- a/src/devlog/index.html
+++ b/src/devlog/index.html
@@ -5,7 +5,7 @@ permalink: /devlog
 ---
 <div class="home">
     {% include tagcloud.html category = "devlog" %}
+    {% include tagcloud-simple.html category = "devlog" message = "Sort by project:" %}
     {% include rss.html %}
-
     {% include post-list.html category = "devlog" %}
 </div>
