--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -42,6 +42,16 @@ permalink: /contact
     </li>
     <li>
         <img
+            src="/assets/icons/kofi.png"
+            width="16"
+            height="16"
+            class="icon"
+            style="transform: scale(1.5) translatex(1px);">I am
+        <a href="https://ko-fi.com/realjame">realjame</a>
+        on Ko-Fi
+    </li>
+    <li>
+        <img
             src="/assets/icons/linkedin.ico"
             width="16"
             height="16"
@@ -88,6 +98,15 @@ permalink: /contact
         <a href="https://wiki.realja.me/index.php/User:Realjame">Realjame</a>
         on
         <a href="https://wiki.realja.me">Roblox Legacy Docs</a>
+    </li>
+    <li>
+        <img
+            src="/assets/icons/twitch.svg"
+            width="16"
+            height="16"
+            class="icon">I am
+        <a href="https://www.twitch.tv/realjame_">realjame_</a>
+        on Twitch
     </li>
     <li>
         <img
@@ -289,7 +308,7 @@ permalink: /contact
         <tr></tr>
         <tr>
             <td><img
-                    src="/assets/silk/companion/png/16/ipod_nano.png"
+                    src="/assets/silk/companion/png/16/laptop.png"
                     width="16"
                     height="16"
                     class="icon"></td>
@@ -301,7 +320,7 @@ permalink: /contact
         <tr></tr>
         <tr>
             <td><img
-                    src="/assets/silk/companion/png/16/ipod_nano.png"
+                    src="/assets/silk/computer.png"
                     width="16"
                     height="16"
                     class="icon"></td>
@@ -312,29 +331,63 @@ permalink: /contact
         </tr>
         <tr>
             <td><img
-                    src="/assets/silk/companion/png/16/ipod_nano.png"
+                    src="/assets/silk/server.png"
+                    width="16"
+                    height="16"
+                    class="icon"></td>
+            <td>
+                Spiketail
+            </td>
+            <td>Vultr VPS server</td>
+        </tr>
+        <tr>
+            <td><img
+                    src="/assets/silk/ipod.png"
                     width="16"
                     height="16"
                     class="icon"></td>
             <td>
                 <i>unnamed</i>
             </td>
-            <td>2005 iPod Mini, silver 4GB (upgraded to 32GB)</td>
+            <td>2005 iPod Mini, silver (upgraded to 32GB)</td>
         </tr>
+
         <tr>
             <td><img
-                    src="/assets/silk/companion/png/16/ipod_nano.png"
+                    src="/assets/silk/companion/png/16/smartphone.png"
                     width="16"
                     height="16"
                     class="icon"></td>
             <td>
-                <i>unnamed</i>
+                <i>Dragonlet</i>
+            </td>
+            <td>Google Pixel 6 Pro</td>
+        </tr>
+        <tr>
+            <td><img
+                    src="/assets/silk/book.png"
+                    width="16"
+                    height="16"
+                    class="icon"></td>
+            <td>
+                <i>Amberwing</i>
+            </td>
+            <td>Kindle Voyage</td>
+        </tr>
+        <tr>
+            <td><img
+                    src="/assets/silk/controller.png"
+                    width="16"
+                    height="16"
+                    class="icon"></td>
+            <td>
+                <i>Flameskimmer</i>
             </td>
             <td>Nintendo DSi, red</td>
         </tr>
         <tr>
             <td><img
-                    src="/assets/silk/companion/png/16/ipod_nano.png"
+                    src="/assets/silk/controller.png"
                     width="16"
                     height="16"
                     class="icon"></td>
@@ -345,62 +398,51 @@ permalink: /contact
         </tr>
         <tr>
             <td><img
-                    src="/assets/silk/companion/png/16/ipod_nano.png"
+                    src="/assets/silk/companion/png/16/smartphone.png"
                     width="16"
                     height="16"
                     class="icon"></td>
             <td>
-                <i>unnamed</i>
-            </td>
-            <td>Kindle Voyage</td>
-        </tr>
-        <tr>
-            <td><img
-                    src="/assets/silk/companion/png/16/ipod_nano.png"
-                    width="16"
-                    height="16"
-                    class="icon"></td>
-            <td>
-                <i>unnamed</i>
+                <i>Spotwing</i>
             </td>
             <td>Kindle Fire HD 10 Gen 7</td>
         </tr>
         <tr>
             <td><img
-                    src="/assets/silk/companion/png/16/ipod_nano.png"
+                    src="/assets/silk/controller.png"
                     width="16"
                     height="16"
                     class="icon"></td>
             <td>
-                <i>unnamed</i>
+                <i>Whitetail</i>
             </td>
             <td>Nintendo Wii</td>
         </tr>
         <tr>
             <td><img
-                    src="/assets/silk/companion/png/16/ipod_nano.png"
+                    src="/assets/silk/controller.png"
                     width="16"
                     height="16"
                     class="icon"></td>
             <td>
-                <i>unnamed</i>
+                <i>Saddlebag</i>
             </td>
             <td>Nintendo Wii U, black</td>
         </tr>
         <tr>
             <td><img
-                    src="/assets/silk/companion/png/16/ipod_nano.png"
+                    src="/assets/silk/controller.png"
                     width="16"
                     height="16"
                     class="icon"></td>
             <td>
-                <i>unnamed</i>
+                <i>Jewelwing</i>
             </td>
             <td>New Nintendo 3DS XL, Galaxy Style</td>
         </tr>
         <tr>
             <td><img
-                    src="/assets/silk/companion/png/16/ipod_nano.png"
+                    src="/assets/silk/companion/png/16/smartphone.png"
                     width="16"
                     height="16"
                     class="icon"></td>
@@ -411,7 +453,7 @@ permalink: /contact
         </tr>
         <tr>
             <td><img
-                    src="/assets/silk/companion/png/16/ipod_nano.png"
+                    src="/assets/silk/phone.png"
                     width="16"
                     height="16"
                     class="icon"></td>
@@ -420,5 +462,60 @@ permalink: /contact
             </td>
             <td>Nokia 2780</td>
         </tr>
+        <tr>
+            <td><img
+                    src="/assets/silk/ipod.png"
+                    width="16"
+                    height="16"
+                    class="icon"></td>
+            <td>
+                <i>unnamed</i>
+            </td>
+            <td>iPod Nano Gen 5, purple</td>
+        </tr>
+        <tr>
+            <td><img
+                    src="/assets/silk/monitor.png"
+                    width="16"
+                    height="16"
+                    class="icon"></td>
+            <td>
+                <i>N/A</i>
+            </td>
+            <td>Compaq MV5500 (CRT monitor)</td>
+        </tr>
+        <tr>
+            <td><img
+                    src="/assets/silk/controller.png"
+                    width="16"
+                    height="16"
+                    class="icon"></td>
+            <td>
+                <i>Ringtail</i>
+            </td>
+            <td>Steam Deck</td>
+        </tr>
     </tbody>
 </table>
+<p>I own a lot of random hardware. Some of it formerly belonged to my parents or older siblings, and some of it I've worked very hard to pursue and get (CRT and Dreamcast), but all of it was gathered over the course of years. The hardware spans from the 2020s to the late 90s, but I manage to find a use for everything.</p>
+
+<p>Some notes:</p>
+
+<ul>
+    <li>The Aurora R7 has Debian installed and is acting as a home server, I host Minecraft Better Than Adventure on it for me and my friends :DD</li>
+    <li>The iPod Mini was upgraded with a new battery and a SD card slot, I also installed the
+        <a href="rockbox.org">Rockbox custom firmware</a>. I put in a 32GB SD as that's all I had, but I could expand it in the future. I love iPods so much!!! This thing is a daily driver for me, I use it in the car, at school, biking, wherever.</li>
+    <li>
+        <a href="/dailynote/kindle-jailbreak.html">The Kindle e-reader is jailbroken with KOReader installed.</a>
+    </li>
+    <li>The DSi is my favorite handheld in terms of design. Although it's fun to emulate Switch games on my Steam Deck, so that sees more use.</li>
+    <li>The Dreamcast was lended to me by Nick64, god bless this man. I replaced the failing disc drive with a GD-EMU, which can load games from an SD card.</li>
+    <li>The Kindle Fire tablet has LineageOS installed, but I'm not exactly sure what to do with it right now.</li>
+    <li>The Wii is awesome. I'm planning to make an alternate version of my site designed for the Wii web browser, as well as making my own homebrew!!</li>
+    <li>I don't really like the 3DS... it feels too cheap and plastic-y compared to the sleek matte of the DSi line.</li>
+    <li>The Oneplus 6T is being lended to my friend for use with
+        <a href="https://www.kali.org/docs/nethunter/">Kali NetHunter</a>
+        hacking tools >:)</li>
+    <li>The iPod Nano is my favorite iPod design - it looks beautiful, sleek, and is the peak of "Y2K aesthetics" for me. But it's a FIRE HAZARD, the battery is literally bulging and pressing the screen out. So I just have it on a shelf, sadly going unused. :(</li>
+    <li>The CRT was like $60 but it looks pretty cool and great for playing Dreamcast so it was worth the price for me :) hard to find CRTs around here...</li>
+</ul>
