Finishing touches. The website should be done, I just need to add my completed resume pdf and add screenshots/images to the new blog post and daily notes.

--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -3,7 +3,7 @@ layout: page
 title: "projects"
 permalink: /projects
 ---
-{% include callout.html type = "info" content = "Please check my <a href='/resume.pdf'>resume</a> for professional information. I am open to any offers." %}
+{% include callout.html type = "info" content = "Please check my <a href='/resume.pdf'>resume</a> and <a href='https://linkedin.com/in/jamescstubbs'>LinkedIn</a> for professional information. I am open to any offers." %}
 <!--
 yeah, i have a ton of regret for not being able to see projects through completion.
 in my life i always either have 0 motivation to do anything or i "hyperfocus" and basically spend whole days doing nothing but working on something.
