--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -11,7 +11,7 @@ permalink: /contact
 
 <p>This is in order to afford and earn a move back to Washington, my home state, to take college there. It'll be extremely tough, and might not work out exactly the way I hope, but I know good things will come out of this year no matter what. Feel free to join and support me on this journey!!</p>
 
-{% include callout.html type = "info" content = "Please check my <a href='/resume.pdf'>resume</a> and <a href='https://linkedin.com/in/jamescstubbs'>LinkedIn</a> for professional information. I am open to any offers." %}
+{% include callout.html type = "info" content = "Please check my <a href='/Resume-JamesStubbs.pdf'>resume</a> and <a href='https://linkedin.com/in/jamescstubbs'>LinkedIn</a> for professional information. I am open to any offers." %}
 
 <ul class="contact-accounts">
     <li>
@@ -137,7 +137,7 @@ permalink: /contact
 
 <p>Oh, by the way I do have a cool 88x31 button you can add to your site :D It's a scene I created in the old Roblox engine, so I regularly swap out the background to different classic maps.</p>
 
-<a href="https://realja.me"><img src="https://realja.me/realjame.gif"></a>
+<a href="/"><img src="/realjame.gif"></a>
 
 <p>Because of the auto-updating, I'd like you to link the image source directly to my website, so when I update, it'll update on every site that uses it! Don't worry, I have Cloudflare and caching and stuff, it won't hurt. And of course, you don't have to.</p>
 
