Make the page content center aligned to help big screens, add screenshots to update 3, yeah we basically just need a picture for the kindle dailynote and we're done

--- a/src/dailynote/index.html
+++ b/src/dailynote/index.html
@@ -16,8 +16,11 @@ oh fun fact, simon willison is the guy who made the django framework
 
 <p>
     Extremely frequent brief* writings. Primarily collecting things I've learned, but there may be thoughts and other random stuff too.
-    <a href="{% post_url /blog/2023-08-30-update-3 %}">Why?</a>
-</p>
+    {% comment %}
+    <a href="{ post_url /dailynote/why-dailynotes }">Why?</a>
+    todo: write this post
+    add the % when you do lol
+    {% endcomment %}</p>
 <small>*not actually daily</small>
 
 {% include tagcloud.html category = "dailynote" %}
