--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -19,6 +19,7 @@ permalink: /contact
             src="/assets/silk/email.png"
             width="16"
             height="16"
+            alt=""
             class="icon">I am
         <a href="mailto:james@realja.me">james@realja.me</a>
         on e-mail
@@ -28,6 +29,7 @@ permalink: /contact
             src="/assets/icons/discord.svg"
             width="16"
             height="16"
+            alt=""
             class="icon">I am
         <u>@realjame</u>
         on Discord</li>
@@ -36,6 +38,7 @@ permalink: /contact
             src="/assets/icons/github.svg"
             width="16"
             height="16"
+            alt=""
             class="icon flat-icon">I am
         <a href="https://github.com/real-jame">real-jame</a>
         on GitHub
@@ -45,6 +48,7 @@ permalink: /contact
             src="/assets/icons/kofi.png"
             width="16"
             height="16"
+            alt=""
             class="icon"
             style="transform: scale(1.5) translatex(1px);">I am
         <a href="https://ko-fi.com/realjame">realjame</a>
@@ -55,6 +59,7 @@ permalink: /contact
             src="/assets/icons/linkedin.ico"
             width="16"
             height="16"
+            alt=""
             class="icon">I am
         <a href="https://linkedin.com/in/jamescstubbs">jamescstubbs</a>
         on LinkedIn</li>
@@ -63,11 +68,13 @@ permalink: /contact
             src="/assets/icons/mastodon.svg"
             width="16"
             height="16"
+            alt=""
             class="icon">I am
         <a href="https://wetdry.world/@jame">jame@wetdry.world <img
                 src="/assets/icons/wetdryworld.ico"
                 width="16"
                 height="16"
+                alt=""
                 class="icon"></a>
         on Mastodon
     </li>
@@ -76,6 +83,7 @@ permalink: /contact
             src="/assets/icons/reddit.svg"
             width="16"
             height="16"
+            alt=""
             class="icon">I am
         <a href="https://www.reddit.com/u/realjame">realjame</a>
         on Reddit
@@ -85,6 +93,7 @@ permalink: /contact
             src="/assets/icons/roblox.ico"
             width="16"
             height="16"
+            alt=""
             class="icon">I am
         <a href="https://www.roblox.com/users/22645404/profile">realjame98</a>
         on Roblox
@@ -94,6 +103,7 @@ permalink: /contact
             src="/assets/icons/rbxlegacydocs.ico"
             width="16"
             height="16"
+            alt=""
             class="icon">I am
         <a href="https://wiki.realja.me/index.php/User:Realjame">Realjame</a>
         on
@@ -104,6 +114,7 @@ permalink: /contact
             src="/assets/icons/twitch.svg"
             width="16"
             height="16"
+            alt=""
             class="icon">I am
         <a href="https://www.twitch.tv/realjame_">realjame_</a>
         on Twitch
@@ -113,6 +124,7 @@ permalink: /contact
             src="/assets/icons/twitter.svg"
             width="16"
             height="16"
+            alt=""
             class="icon">I am
         <a href="https://twitter.com/real__jame">real__jame</a>
         on Twitter
@@ -122,6 +134,7 @@ permalink: /contact
             src="/assets/icons/youtube.svg"
             width="16"
             height="16"
+            alt=""
             class="icon"
             style="height: auto;">I am
         <a href="https://youtube.com/@realjame">realjame</a>
@@ -142,7 +155,11 @@ permalink: /contact
 <p>Because of the auto-updating, I'd like you to link the image source directly to my website, so when I update, it'll update on every site that uses it! Don't worry, I have Cloudflare and caching and stuff, it won't hurt. And of course, you don't have to.</p>
 
 <textarea readonly>
-    <a href="https://realja.me"><img src="https://realja.me/realjame.gif" alt="realja.me"></a>
+    <a href="https://realja.me"><img
+            src="https://realja.me/realjame.gif"
+            width="88"
+            height="31"
+            alt="realja.me"></a>
 </textarea>
 
 <p>Hey, let me know if you add it btw!</p>
@@ -311,6 +328,7 @@ permalink: /contact
                     src="/assets/silk/companion/png/16/laptop.png"
                     width="16"
                     height="16"
+                    alt=""
                     class="icon"></td>
             <td>
                 Petaltail
@@ -323,6 +341,7 @@ permalink: /contact
                     src="/assets/silk/computer.png"
                     width="16"
                     height="16"
+                    alt=""
                     class="icon"></td>
             <td>
                 Clubtail
@@ -334,6 +353,7 @@ permalink: /contact
                     src="/assets/silk/server.png"
                     width="16"
                     height="16"
+                    alt=""
                     class="icon"></td>
             <td>
                 Spiketail
@@ -345,6 +365,7 @@ permalink: /contact
                     src="/assets/silk/ipod.png"
                     width="16"
                     height="16"
+                    alt=""
                     class="icon"></td>
             <td>
                 <i>unnamed</i>
@@ -357,6 +378,7 @@ permalink: /contact
                     src="/assets/silk/companion/png/16/smartphone.png"
                     width="16"
                     height="16"
+                    alt=""
                     class="icon"></td>
             <td>
                 <i>Dragonlet</i>
@@ -368,6 +390,7 @@ permalink: /contact
                     src="/assets/silk/book.png"
                     width="16"
                     height="16"
+                    alt=""
                     class="icon"></td>
             <td>
                 <i>Amberwing</i>
@@ -379,6 +402,7 @@ permalink: /contact
                     src="/assets/silk/controller.png"
                     width="16"
                     height="16"
+                    alt=""
                     class="icon"></td>
             <td>
                 <i>Flameskimmer</i>
@@ -390,6 +414,7 @@ permalink: /contact
                     src="/assets/silk/controller.png"
                     width="16"
                     height="16"
+                    alt=""
                     class="icon"></td>
             <td>
                 <i>unnamed</i>
@@ -401,6 +426,7 @@ permalink: /contact
                     src="/assets/silk/companion/png/16/smartphone.png"
                     width="16"
                     height="16"
+                    alt=""
                     class="icon"></td>
             <td>
                 <i>Spotwing</i>
@@ -412,6 +438,7 @@ permalink: /contact
                     src="/assets/silk/controller.png"
                     width="16"
                     height="16"
+                    alt=""
                     class="icon"></td>
             <td>
                 <i>Whitetail</i>
@@ -423,6 +450,7 @@ permalink: /contact
                     src="/assets/silk/controller.png"
                     width="16"
                     height="16"
+                    alt=""
                     class="icon"></td>
             <td>
                 <i>Saddlebag</i>
@@ -434,6 +462,7 @@ permalink: /contact
                     src="/assets/silk/controller.png"
                     width="16"
                     height="16"
+                    alt=""
                     class="icon"></td>
             <td>
                 <i>Jewelwing</i>
@@ -445,6 +474,7 @@ permalink: /contact
                     src="/assets/silk/companion/png/16/smartphone.png"
                     width="16"
                     height="16"
+                    alt=""
                     class="icon"></td>
             <td>
                 <i>unnamed</i>
@@ -456,6 +486,7 @@ permalink: /contact
                     src="/assets/silk/phone.png"
                     width="16"
                     height="16"
+                    alt=""
                     class="icon"></td>
             <td>
                 <i>unnamed</i>
@@ -467,6 +498,7 @@ permalink: /contact
                     src="/assets/silk/ipod.png"
                     width="16"
                     height="16"
+                    alt=""
                     class="icon"></td>
             <td>
                 <i>unnamed</i>
@@ -478,6 +510,7 @@ permalink: /contact
                     src="/assets/silk/monitor.png"
                     width="16"
                     height="16"
+                    alt=""
                     class="icon"></td>
             <td>
                 <i>N/A</i>
@@ -489,6 +522,7 @@ permalink: /contact
                     src="/assets/silk/controller.png"
                     width="16"
                     height="16"
+                    alt=""
                     class="icon"></td>
             <td>
                 <i>Ringtail</i>
