--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -27,6 +27,7 @@ thank you for reading. i will persevere
             src="/assets/silk/tag_purple.png"
             width="32"
             height="32"
+            alt=""
             class="icon">Project Micrathena</h3>
     <p class="project-status">July 2023, returning September</p>
     <p class="project-description">A new game for 2008 Roblox. Active development is on hold, but it is still in active planning and designing.<br>Development will resume in September. More details will be revealed then!<br><small>There will be a modern Roblox port :)</small>
@@ -37,6 +38,7 @@ thank you for reading. i will persevere
             src="/assets/icons/rbxlegacydocs.ico"
             width="32"
             height="32"
+            alt=""
             class="icon">Roblox Legacy Documentation</h3>
     <p class="project-links">
         <a href="https://wiki.realja.me">https://wiki.realja.me</a>
@@ -54,6 +56,7 @@ thank you for reading. i will persevere
             src="/realjame.gif"
             width="88"
             height="31"
+            alt=""
             class="icon"
             style="width: 88px; height: 31px;">realja.me</h3>
     <p class="project-links">
@@ -68,6 +71,7 @@ thank you for reading. i will persevere
             src="/assets/icons/spookingout.png"
             width="32"
             height="32"
+            alt=""
             class="icon">Spooking Out</h3>
     <p class="project-links">
         <a href="https://drive.google.com/file/d/1T1XiYSWPxSThOLF8B5Xc60imWTxiufPO/view">2010 RBXL Download</a>
@@ -87,6 +91,7 @@ thank you for reading. i will persevere
             src="/assets/icons/textarea.ico"
             width="32"
             height="32"
+            alt=""
             class="icon">textarea.site</h3>
     <p class="project-links">
         <a href="https://textarea.site">https://textarea.site</a>
@@ -103,6 +108,7 @@ thank you for reading. i will persevere
             src="/assets/silk/tag_orange.png"
             width="32"
             height="32"
+            alt=""
             class="icon">fxreddit (FixReddit)</h3>
     <p class="project-links">
         <a href="https://github.com/real-jame/FixReddit">Source code</a>
@@ -117,6 +123,7 @@ thank you for reading. i will persevere
             src="/assets/silk/tag_green.png"
             width="32"
             height="32"
+            alt=""
             class="icon">Untitled farming game for 2012 Roblox</h3>
     <p class="project-links">
         <a href="/devlogs/farming-1.html">Devlog 1</a>
@@ -133,6 +140,7 @@ thank you for reading. i will persevere
             src="/assets/silk/tag_pink.png"
             width="32"
             height="32"
+            alt=""
             class="icon">2010 Roblox prototype experiments</h3>
     <p class="project-links">
         <a href="/devlogs/lava-escape-proto-1.html">Lava escape</a>
