--- a/pages/projects.html
+++ b/pages/projects.html
@@ -3,7 +3,8 @@ layout: page
 title: "projects"
 permalink: /projects
 ---
-{% include callout.html type = "info" content = "Please check my <a href='/Resume-JamesStubbs.pdf'>resume</a> and <a href='https://linkedin.com/in/jamescstubbs'>LinkedIn</a> for professional information. I am open to any offers." %}
+{% include callout.html type = "info" content = "Please check my <a href='/Resume-JamesStubbs.pdf'>resume</a> and <a
+    href='https://linkedin.com/in/jamescstubbs'>LinkedIn</a> for professional information. I am open to any offers." %}
 <!--
 yeah, i have a ton of regret for not being able to see projects through completion.
 in my life i always either have 0 motivation to do anything or i "hyperfocus" and basically spend whole days doing nothing but working on something.
@@ -11,7 +12,6 @@ right now, i guess i'm hyperfocusing on the site redesign.
 but since like spring 2023 up to now, august, its been just non-stop executive dysfunction for the most part
 
 that's why textarea.site rotted,
-fxreddit never got past a really early prototype,
 and any other possible projects didn't even get started.
 i've spent all this time working on roblox games, like my entire high school life but i've only released 1. spooking out, which was due to my friend helping me that prevented it from rotting.
 
@@ -22,23 +22,13 @@ these html comments are nice for letting me vent
 i never talk about this stuff online
 
 thank you for reading. i will persevere
---><div class="card card-active">
-    <h3 class="project-title"><img
-            src="/assets/silk/tag_purple.png"
-            width="32"
-            height="32"
-            alt=""
-            class="icon">Project Micrathena</h3>
-    <p class="project-status">July 2023, returning September</p>
-    <p class="project-description">A new game for 2008 Roblox. Active development is on hold, but it is still in active planning and designing.<br>Development will resume in September. More details will be revealed then!<br><small>There will be a modern Roblox port :)</small>
-    </p>
-</div>
+
+9/27/23 update:
+things are going good with micrathena, and my life in general. :^)
+-->
+{% include /projects/micrathena.html %}
 <div class="card card-active">
-    <h3 class="project-title"><img
-            src="/assets/icons/rbxlegacydocs.ico"
-            width="32"
-            height="32"
-            alt=""
+    <h3 class="project-title"><img src="/assets/icons/rbxlegacydocs.ico" width="32" height="32" alt=""
             class="icon">Roblox Legacy Documentation</h3>
     <p class="project-links">
         <a href="https://wiki.realja.me">https://wiki.realja.me</a>
@@ -48,30 +38,41 @@ thank you for reading. i will persevere
         <a href="/devlogs/wiki-2.html">April update post</a>
     </p>
     <p class="project-status">Active since December 2022</p>
-    <p class="project-description">A rehosting of the Roblox Wiki from 2012, expanded with updated documentation and resources to help people make
+    <p class="project-description">A rehosting of the Roblox Wiki from 2012, expanded with updated documentation and
+        resources to help people make
         new games for classic clients in 2023.</p>
 </div>
+<div class="card card-inactive">
+    <h3 class="project-title"><img src="/assets/icons/textarea.ico" width="32" height="32" alt=""
+            class="icon">textarea.site</h3>
+    <p class="project-links">
+        <a href="https://textarea.site">https://textarea.site</a>
+        ·
+        <a href="https://real-jame.github.io/textarea">Nightly version</a>
+        ·
+        <a href="https://github.com/real-jame/textarea">Source code</a>
+    </p>
+    <p class="project-status">August - November 2022, active since September 2023</p>
+    <p class="project-description">Textarea is an auto-saving textbox website. It's intentionally simple - only plain
+        text, and only the 1 page. When you reopen the site, anything previously written will remain. Great for taking
+        quick notes.<br>I've been slowly working on a major update in September, in-between work on Micrathena, that
+        makes it less bloated and adds some new features.</p>
+</div>
 <div class="card card-active">
-    <h3 class="project-title"><img
-            src="/realjame.gif"
-            width="88"
-            height="31"
-            alt=""
-            class="icon"
+    <h3 class="project-title"><img src="/realjame.gif" width="88" height="31" alt="" class="icon"
             style="width: 88px; height: 31px;">realja.me</h3>
     <p class="project-links">
         <a href="https://github.com/real-jame/realjame">Source code</a>
     </p>
     <p class="project-status">Active since November 2021</p>
-    <p class="project-description">This website is a project in itself. It's been on and off, but so far its endured 3 comprehensive redesigns and expansions. It currently has 3 post feeds - a blog, devlogs, and "daily notes". By September 2023, posting should finally be active and consistent.<br>This website is made using
-        <a href="https://jekyllrb.com/">Jekyll</a>, a static site generator tool.</p>
+    <p class="project-description">This website is a project in itself. It's been on and off, but so far its endured 3
+        comprehensive redesigns and expansions. It currently has 3 post feeds - a blog, devlogs, and "daily notes". By
+        September 2023, posting should finally be active and consistent.<br>This website is made using
+        <a href="https://jekyllrb.com/">Jekyll</a>, a static site generator tool.
+    </p>
 </div>
 <div class="card card-complete">
-    <h3 class="project-title"><img
-            src="/assets/icons/spookingout.png"
-            width="32"
-            height="32"
-            alt=""
+    <h3 class="project-title"><img src="/assets/icons/spookingout.png" width="32" height="32" alt=""
             class="icon">Spooking Out</h3>
     <p class="project-links">
         <a href="https://drive.google.com/file/d/1T1XiYSWPxSThOLF8B5Xc60imWTxiufPO/view">2010 RBXL Download</a>
@@ -83,33 +84,17 @@ thank you for reading. i will persevere
         <a href="/blog/spooking-out-modern-roblox-port.html">Port announcement</a>
     </p>
     <p class="project-status">Complete! | September - November 2022</p>
-    <p class="project-description">Spooking Out is a Halloween game made for 2010 Roblox by me and a friend. It's a simple arcade-style game about working together to catch ghosts in various maps. A simple game, but we had a lot of fun making it and playing it with the community on release :)<br>It was submitted for the Novetus Halloween game contest,
-        <b>and we won!!!!!!! Our game is now bundled with Novetus as a default map.</b><br>I also ported it to modern Roblox, adding controller/Xbox/mobile support and badges.</p>
-</div>
-<div class="card card-inactive">
-    <h3 class="project-title"><img
-            src="/assets/icons/textarea.ico"
-            width="32"
-            height="32"
-            alt=""
-            class="icon">textarea.site</h3>
-    <p class="project-links">
-        <a href="https://textarea.site">https://textarea.site</a>
-        ·
-        <a href="https://real-jame.github.io/textarea">Nightly version</a>
-        ·
-        <a href="https://github.com/real-jame/textarea">Source code</a>
+    <p class="project-description">Spooking Out is a Halloween game made for 2010 Roblox by me and a friend. It's a
+        simple arcade-style game about working together to catch ghosts in various maps. A simple game, but we had a lot
+        of fun making it and playing it with the community on release :)<br>It was submitted for the Novetus Halloween
+        game contest,
+        <b>and we won!!!!!!! Our game is now bundled with Novetus as a default map.</b><br>I also ported it to modern
+        Roblox, adding controller/Xbox/mobile support and badges.
     </p>
-    <p class="project-status">Will return soon | August - November 2022</p>
-    <p class="project-description">Textarea is an auto-saving textbox website. It's intentionally simple - only plain text, and only the 1 page. When you reopen the site, anything previously written will remain. Great for taking quick notes.<br>It's fully working and stable, but I would like to go back and add more utility features such as importing text files, more themes, sharing your text, etc.</p>
 </div>
 <div class="card card-inactive">
-    <h3 class="project-title"><img
-            src="/assets/silk/tag_green.png"
-            width="32"
-            height="32"
-            alt=""
-            class="icon">Untitled farming game for 2012 Roblox</h3>
+    <h3 class="project-title"><img src="/assets/silk/tag_green.png" width="32" height="32" alt="" class="icon">Untitled
+        farming game for 2012 Roblox</h3>
     <p class="project-links">
         <a href="/devlogs/farming-1.html">Devlog 1</a>
         ·
@@ -118,15 +103,15 @@ thank you for reading. i will persevere
         <a href="/devlogs/farming-3.html">Devlog 3</a>
     </p>
     <p class="project-status">April - June 2023</p>
-    <p class="project-description">This was planned to be a new game for the 2012 Roblox engine. Gameplay is divided into peaceful Stardew Valley inspired gameplay of farming, decorating your farm, etc. and part roguelike-style exploring wild forests to collect materials. Make money to level up your farm, and a whole lot more ideas and plans. However, the game suffered intense scope creep, and I got burned out from development (especially in the later 2 months) and shelved it. I'd still like to make it, though.</p>
+    <p class="project-description">This was planned to be a new game for the 2012 Roblox engine. Gameplay is divided
+        into peaceful Stardew Valley inspired gameplay of farming, decorating your farm, etc. and part roguelike-style
+        exploring wild forests to collect materials. Make money to level up your farm, and a whole lot more ideas and
+        plans. However, the game suffered intense scope creep, and I got burned out from development (especially in the
+        later 2 months) and shelved it. I'd still like to make it, though.</p>
 </div>
 <div class="card card-inactive">
-    <h3 class="project-title"><img
-            src="/assets/silk/tag_pink.png"
-            width="32"
-            height="32"
-            alt=""
-            class="icon">2010 Roblox prototype experiments</h3>
+    <h3 class="project-title"><img src="/assets/silk/tag_pink.png" width="32" height="32" alt="" class="icon">2010
+        Roblox prototype experiments</h3>
     <p class="project-links">
         <a href="/devlogs/lava-escape-proto-1.html">Lava escape</a>
         ·
@@ -135,7 +120,9 @@ thank you for reading. i will persevere
         <a href="/devlogs/movementpvp-proto-2.html">Movement PVP</a>
     </p>
     <p class="project-status">January - April 2023</p>
-    <p class="project-description">I was experimenting with random game ideas while trying to think of something to make with other Novetus creators. None really seemed like "the one", but the lava one could make for a simple fun game to be made in a weekend.</p>
+    <p class="project-description">I was experimenting with random game ideas while trying to think of something to make
+        with other Novetus creators. None really seemed like "the one", but the lava one could make for a simple fun
+        game to be made in a weekend.</p>
 </div>
 {% comment %}
 Emmet notation for making a new card
