--- a/dailynote/index.html
+++ b/dailynote/index.html
@@ -20,11 +20,14 @@ oh fun fact, simon willison is the guy who made the django framework
     <a href="{ post_url /dailynote/why-dailynotes }">Why?</a>
     todo: write this post
     add the % when you do lol
-    {% endcomment %}</p>
-<small>*not actually daily</small>
+    {% endcomment %}
+    <small>*not actually daily</small>    
+</p>
+
+<i>Posts tagged with "Tech" are entirely nerd stuff, and posts tagged with "Thought" are not.</i>
 
 {% include tagcloud.html category = "dailynote" %}
-{% include tagcloud-simple.html category = "dailynote" %}
+{% include tagcloud-simple.html category = "dailynote" message = "Additional topics:" %}
 
 <h2>Recent notes</h2>
 
